kustomization/istio-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: istio-demo
  labels:
    istio-injection: enabled
spec: {}
status: {}
